--- a/.env.example
+++ b/.env.example
@@ -9,13 +9,8 @@ APP_HOST='127.0.0.1'
 LOGGING_DIR='logs'
 LOGGING_LEVEL='debug'
 
-# Database
-DB_CLIENT='mysql'
-DB_PORT='3306'
-DB_HOST='localhost'
-DB_NAME='api'
-DB_USER='api'
-DB_PASSWORD='api'
+# Mongo database
+MONGO_DB='mongodb://127.0.0.1/ScoreBoardGame'
 
 # Test Environment
 TEST_APP_PORT='9949'
