--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
 # Application
-APP_ENV='dev'
-APP_NAME='ScoreBoardGame'
-APP_VERSION='1.0.0'
-APP_PORT='3000'
-APP_HOST='127.0.0.1'
+APP_ENV=dev
+APP_NAME=ScoreBoardGame
+APP_VERSION=1.0.0
+APP_PORT=3000
+APP_HOST=127.0.0.1
 
 # Log
-LOGGING_DIR='logs'
-LOGGING_LEVEL='debug'
+LOGGING_DIR=logs
+LOGGING_LEVEL=debug
 
 # Mongo database
-MONGO_DB='mongodb://127.0.0.1/ScoreBoardGame'
+MONGO_DB=mongodb://127.0.0.1/ScoreBoardGame
 
 # Test Environment
-TEST_APP_PORT='9949'
-TEST_DB_NAME='express_test'
+TEST_APP_PORT=9949
+TEST_DB_NAME=express_test
+
+# JWT
+JWT_ENCRYPTION=secret
+JWT_EXPIRATION=10000
