--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "space-infix-ops": 2,
     "space-before-blocks": 2,
     "newline-before-return": 2,
-    "linebreak-style": [2, "windows"],
+    "linebreak-style": [2, "unix"],
     "indent": [2, 2, { "SwitchCase": 1 }],
     "object-curly-spacing": [2, "always"],
     "camelcase": [2, { "properties": "never" }],
