--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
     "cors": "^2.8.4",
@@ -59,9 +60,14 @@
     "helmet": "^3.13.0",
     "http-status-codes": "^1.3.0",
     "joi": "^13.4.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.4",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^3.3.0"
   }
